--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-pizza-jsx",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zamay.github.io/react-pizza",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "prettier": "2.7.1",
     "react-content-loader": "^6.2.0"
   }
